--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="calculator">
       <p class="title">©SALC</p>
       <div class="display">
-        <textarea class="dualScreen" id="display2" readonly>  </textarea>
+        <textarea class="dualScreen" id="display2" readonly> </textarea>
         <textarea id="output" class="screen" readonly> </textarea>
       </div>
 
@@ -47,11 +47,12 @@
         <!-- Row 4 -->
 
         <button class="button" onclick="appendNumber('0')">0</button>
-        <button class="button clear" onclick="clearDisplay()">C</button>
+        <button class="button clear" onclick="clearDisplay()">AC</button>
         <button class="button equal" onclick="calculate()">=</button>
         <button class="button operator" onclick="setOperation('/')">/</button>
       </div>
     </div>
+    
     <script src="main.js"></script>
   </body>
 </html>
